--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -6,5 +6,4 @@ updates:
       interval: "weekly"
     assignees:
       - "GalvinPython"
-    target-branch:
-      - "dev"
+    target-branch: "dev"
