--- a/package.json
+++ b/package.json
@@ -1,31 +1,25 @@
 {
-  "name": "next-pages-template",
-  "version": "0.1.0",
-  "private": true,
+  "name": "",
+  "type": "module",
+  "version": "0.0.1",
   "scripts": {
-    "dev": "next dev -p 7001",
-    "build": "next build",
-    "start": "next start -p 7001",
-    "lint": "next lint"
+    "dev": "astro dev --port 7001",
+    "start": "astro dev --port 7001",
+    "build": "astro check && astro build",
+    "preview": "astro preview --port 7002",
+    "astro": "astro"
   },
   "dependencies": {
-    "@nextui-org/react": "^2.2.9",
-    "framer-motion": "^10.16.4",
-    "@types/node": "20.5.7",
-    "@types/react": "18.2.21",
-    "@types/react-dom": "18.2.19",
-    "autoprefixer": "10.4.17",
-    "clsx": "^2.0.0",
-    "eslint": "8.48.0",
-    "eslint-config-next": "14.1.0",
-    "intl-messageformat": "^10.5.0",
-    "next": "14.1.0",
-    "next-themes": "^0.2.1",
-    "postcss": "8.4.31",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "tailwind-variants": "^0.1.18",
-    "tailwindcss": "3.3.5",
-    "typescript": "5.0.4"
+    "@astrojs/check": "^0.5.10",
+    "@astrojs/node": "^8.2.5",
+    "@astrojs/react": "^3.1.0",
+    "@astrojs/sitemap": "^3.1.2",
+    "@elysiajs/cors": "^1.0.2",
+    "@elysiajs/swagger": "^1.0.3",
+    "@fontsource/ubuntu": "^5.0.12",
+    "astro": "^4.5.12",
+    "astro-robots-txt": "^1.0.0",
+    "sqlite3": "^5.1.7",
+    "typescript": "^5.4.3"
   }
 }
