--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "highstock-release": "^6.0.4",
     "react-jsx-highcharts": "^5.0.1",
     "react-odometer": "^0.0.1",
+    "react-odometerjs": "^3.1.3",
     "sqlite3": "^5.1.7",
     "typescript": "^5.4.3"
   },
