--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@elysiajs/cors": "^1.0.2",
     "@elysiajs/swagger": "^1.0.3",
     "@fontsource/ubuntu": "^5.0.12",
+    "@types/sqlite3": "^3.1.11",
     "astro": "^4.5.12",
     "astro-robots-txt": "^1.0.0",
     "highcharts": "^11.4.0",
